--- a/rosie/requirements.txt
+++ b/rosie/requirements.txt
@@ -1,9 +1,9 @@
 brutils==1.0.1
 freezegun==0.3.10
-geopy>=1.11.0
+geopy==1.16.0
 ipdb==0.11
-numpy==1.14.5
+numpy==1.15.0
 # scipy must come before scikit-learn in order to build the wheel in docker image
 scipy==1.1.0
-scikit-learn==0.19.1
+scikit-learn==0.19.2
 serenata-toolbox  # pyup: ignore
